--- a/Tamara/index.html
+++ b/Tamara/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-    <header>
+    <header style="text-align: center;">
         <h1>Recipes</h1>
         <p>A great recipe is at the heart of every memorable meal. Browse our themed recipes for inspiration or search by ingredient.</p>
     </header>
@@ -40,7 +41,7 @@
         <div class="rating">
             <p>89 Ratings</p>
         </div>
-        <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
+        <span  style="color:#F4B400 ;size: 25px;">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
     </section>
     <footer>
         <p>All rights reserved &#169; 2019</p>
