--- a/Islam/index.html
+++ b/Islam/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -40,7 +41,7 @@
         <div class="rating">
             <p>89 Ratings</p>
         </div>
-        <span>&#9733;&#9733;&#9733;&#9733;&#9734;</span>
+        <span  style="color:#F4B400 ;size: 25px;">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
     </section>
     <footer>
         <p>All rights reserved &#169; 2019</p>
